Now With Amazing New Conciseness!