@@ -34,7 +34,6 @@ import java.awt.Color;
 import java.awt.Component;
 import java.awt.Dimension;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import javax.swing.BorderFactory;
@@ -407,9 +406,6 @@ public abstract class TurnLevel extends TurnComponent {
    */
   @Override
   public List<String> getPropertyList() {
-    if (propertyName != null) {
-      return List.of(propertyName);
-    }
-    return Collections.emptyList();
+    return propertyName != null ? List.of(propertyName) : List.of();
   }
 }
